:wrench: fix mobile wrap

--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,7 @@
   --primary: #6dbdff;
   --secondary: #000;
   --tertiary: #ccc;
+  --highlight: #cb6967;
 }
 
 @media (prefers-color-scheme: dark) {
