--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,4 +1,8 @@
 .home {
   display: grid;
-  gap: 20px;
+  gap: 25px;
+
+  @media (max-width: 500px) {
+    gap: 40px;
+  }
 }
