--- a/components/Banner/banner.module.css
+++ b/components/Banner/banner.module.css
@@ -23,6 +23,7 @@
   flex-direction: row;
   font-size: 1em;
   transition: all 300ms linear;
+  flex-wrap: wrap;
 
   @media (max-width: 500px) {
     font-size: 0.5em;
@@ -36,4 +37,8 @@
 .bannerWithHover:hover {
   animation: bannerAnim 300ms linear;
   color: var(--tertiary);
+}
+
+.bannerHighlight {
+  color: var(--highlight);
 }
